lab20/provision/roles/inetrouter-role/files/iptables-knock
# Generated by iptables-save v1.4.21 on Sun Jan 10 15:29:30 2021
*nat
:PREROUTING ACCEPT [41:2548]
:INPUT ACCEPT [5:284]
:OUTPUT ACCEPT [13:988]
:POSTROUTING ACCEPT [6:432]
-A POSTROUTING ! -d 192.168.0.0/22 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Jan 10 15:29:30 2021
# Generated by iptables-save v1.4.21 on Sun Jan 10 15:29:30 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20:1488]
:TRAFFIC - [0:0]
:SSH-INPUT - [0:0]
:SSH-INPUTTWO - [0:0]
-A INPUT -s 192.168.255.2/32 -j TRAFFIC
-A TRAFFIC -p icmp --icmp-type any -j ACCEPT
-A TRAFFIC -m state --state ESTABLISHED,RELATED -j ACCEPT
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 22 -m recent --rcheck --seconds 30 --name SSH2 -j ACCEPT
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH2 --remove -j DROP
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 9991 -m recent --rcheck --name SSH1 -j SSH-INPUTTWO
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH1 --remove -j DROP
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 7777 -m recent --rcheck --name SSH0 -j SSH-INPUT
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH0 --remove -j DROP
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 8881 -m recent --name SSH0 --set -j DROP
-A SSH-INPUT -m recent --name SSH1 --set -j DROP
-A SSH-INPUTTWO -m recent --name SSH2 --set -j DROP
-A TRAFFIC -s 192.168.255.2/32 -j REJECT
COMMIT
# Completed on Sun Jan 10 15:29:30 2021
